[gd_scene load_steps=4 format=2]

[ext_resource path="res://demo/currencies/Create.gd" type="Script" id=1]
[ext_resource path="res://demo/shared/ChainSelect.tscn" type="PackedScene" id=2]
[ext_resource path="res://demo/shared/ErrorBox.tscn" type="PackedScene" id=3]

[node name="Create" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 1 )

[node name="MBox-Request" type="MarginContainer" parent="."]
margin_right = 492.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8

[node name="CurrencyGrid" type="GridContainer" parent="MBox-Request"]
margin_left = 16.0
margin_top = 8.0
margin_right = 476.0
margin_bottom = 556.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/vseparation = 8
custom_constants/hseparation = 16
columns = 2

[node name="Label-v01" type="Label" parent="MBox-Request/CurrencyGrid"]
margin_top = 3.0
margin_right = 120.0
margin_bottom = 17.0
rect_min_size = Vector2( 120, 0 )
text = "Chain"

[node name="ChainSelect" parent="MBox-Request/CurrencyGrid" instance=ExtResource( 2 )]
margin_left = 136.0
margin_right = 460.0
text = "Select a Chain"

[node name="Label-v02" type="Label" parent="MBox-Request/CurrencyGrid"]
margin_top = 33.0
margin_right = 120.0
margin_bottom = 47.0
rect_min_size = Vector2( 120, 0 )
text = "Name"

[node name="NameInput" type="LineEdit" parent="MBox-Request/CurrencyGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 28.0
margin_right = 460.0
margin_bottom = 52.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v03" type="Label" parent="MBox-Request/CurrencyGrid"]
margin_top = 65.0
margin_right = 120.0
margin_bottom = 79.0
rect_min_size = Vector2( 120, 0 )
text = "Symbol"

[node name="SymbolInput" type="LineEdit" parent="MBox-Request/CurrencyGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 60.0
margin_right = 460.0
margin_bottom = 84.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v04" type="Label" parent="MBox-Request/CurrencyGrid"]
margin_top = 97.0
margin_right = 120.0
margin_bottom = 111.0
rect_min_size = Vector2( 120, 0 )
text = "Max Supply"

[node name="SupplyCapInput" type="LineEdit" parent="MBox-Request/CurrencyGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 92.0
margin_right = 460.0
margin_bottom = 116.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
text = "0"
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v05" type="Label" parent="MBox-Request/CurrencyGrid"]
margin_top = 129.0
margin_right = 120.0
margin_bottom = 143.0
rect_min_size = Vector2( 120, 0 )
text = "Secret Key"

[node name="SecretKeyInput" type="LineEdit" parent="MBox-Request/CurrencyGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 124.0
margin_right = 460.0
margin_bottom = 148.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v06" type="Label" parent="MBox-Request/CurrencyGrid"]
margin_top = 161.0
margin_right = 120.0
margin_bottom = 175.0
rect_min_size = Vector2( 120, 0 )
text = "Main Password"

[node name="PasswordInput" type="LineEdit" parent="MBox-Request/CurrencyGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 156.0
margin_right = 460.0
margin_bottom = 180.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="Space-v01" type="Label" parent="MBox-Request/CurrencyGrid"]
margin_top = 191.0
margin_right = 120.0
margin_bottom = 205.0
rect_min_size = Vector2( 120, 0 )

[node name="SubmitButton" type="Button" parent="MBox-Request/CurrencyGrid"]
unique_name_in_owner = true
margin_left = 136.0
margin_top = 188.0
margin_right = 460.0
margin_bottom = 208.0
size_flags_horizontal = 3
text = "create currency"

[node name="HSeparator" type="VSeparator" parent="."]
margin_left = 496.0
margin_right = 520.0
margin_bottom = 564.0
custom_constants/separation = 24

[node name="MBox-Result" type="MarginContainer" parent="."]
margin_left = 524.0
margin_right = 1016.0
margin_bottom = 564.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 16
custom_constants/margin_top = 8
custom_constants/margin_left = 16
custom_constants/margin_bottom = 8

[node name="ErrorBox" parent="MBox-Result" instance=ExtResource( 3 )]
unique_name_in_owner = true
margin_right = 476.0
margin_bottom = 556.0

[node name="ResultBox" type="ScrollContainer" parent="MBox-Result"]
unique_name_in_owner = true
margin_left = 16.0
margin_top = 8.0
margin_right = 476.0
margin_bottom = 556.0

[node name="Grid-Result" type="GridContainer" parent="MBox-Result/ResultBox"]
margin_right = 460.0
margin_bottom = 168.0
size_flags_horizontal = 3
custom_constants/vseparation = 12
custom_constants/hseparation = 12
columns = 2

[node name="Label-v01" type="Label" parent="MBox-Result/ResultBox/Grid-Result"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
rect_min_size = Vector2( 120, 0 )
text = "Name"

[node name="NameField" type="LineEdit" parent="MBox-Result/ResultBox/Grid-Result"]
unique_name_in_owner = true
margin_left = 132.0
margin_right = 460.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v02" type="Label" parent="MBox-Result/ResultBox/Grid-Result"]
margin_top = 41.0
margin_right = 120.0
margin_bottom = 55.0
rect_min_size = Vector2( 120, 0 )
text = "Symbol"

[node name="SymbolField" type="LineEdit" parent="MBox-Result/ResultBox/Grid-Result"]
unique_name_in_owner = true
margin_left = 132.0
margin_top = 36.0
margin_right = 460.0
margin_bottom = 60.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v03" type="Label" parent="MBox-Result/ResultBox/Grid-Result"]
margin_top = 77.0
margin_right = 120.0
margin_bottom = 91.0
rect_min_size = Vector2( 120, 0 )
text = "Max Supply"

[node name="MaxSupplyField" type="LineEdit" parent="MBox-Result/ResultBox/Grid-Result"]
unique_name_in_owner = true
margin_left = 132.0
margin_top = 72.0
margin_right = 460.0
margin_bottom = 96.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v04" type="Label" parent="MBox-Result/ResultBox/Grid-Result"]
margin_top = 113.0
margin_right = 120.0
margin_bottom = 127.0
rect_min_size = Vector2( 120, 0 )
text = "Contract  Id"

[node name="ContractIdField" type="LineEdit" parent="MBox-Result/ResultBox/Grid-Result"]
unique_name_in_owner = true
margin_left = 132.0
margin_top = 108.0
margin_right = 460.0
margin_bottom = 132.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Label-v05" type="Label" parent="MBox-Result/ResultBox/Grid-Result"]
margin_top = 149.0
margin_right = 120.0
margin_bottom = 163.0
rect_min_size = Vector2( 120, 0 )
text = "Currency Id"

[node name="CurrencyIdField" type="LineEdit" parent="MBox-Result/ResultBox/Grid-Result"]
unique_name_in_owner = true
margin_left = 132.0
margin_top = 144.0
margin_right = 460.0
margin_bottom = 168.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_speed = 0.5
